Implement tests and swagger for categories.
